--- a/index.html
+++ b/index.html
@@ -18,19 +18,20 @@
     <header>
       <nav>
         <!-- logo -->
-        <a class="logo-main" href="index.html">
-          <span class="logo-part-one">WEB</span>STUDIO
+        <a class="logo-main" href="./index.html">
+          <!-- <span class="logo-part-one"></span> -->
+          WEBSTUDIO
         </a>
         <!-- menu -->
         <!-- использовать ли тут меню, или лучше юл? по семантике вроде как лучше меню? -->
-        <menu>
+        <ul>
           <li class="menu-list"><a href="index.html">Studio</a></li>
           <li class="menu-list"><a href="index.html">Portfolio</a></li>
           <li class="menu-list"><a href="index.html">Contacts</a></li>
-        </menu>
+        </ul>
       </nav>
       <!-- contacts -->
-      <ul>
+      <address>
         <li class="contacts-item">
           <a class="contacts-link" href="mailto:info@devstudio.com"
             >info@devstudio.com</a
@@ -41,7 +42,7 @@
             >+11 (000) 111-11-11</a
           >
         </li>
-      </ul>
+      </address>
     </header>
 
     <!-- block solutions/ welcome page -->
@@ -54,6 +55,7 @@
 
       <!-- section one goals -->
       <section class="section-one">
+        <h2>Our Goal</h2>
         <ul>
           <li>
             <h3 class="goal-h">Strategy</h3>
@@ -209,8 +211,9 @@
     </main>
 
     <footer>
-      <a class="logo-main" href="index.html">
-        <span class="logo-part-one">WEB</span>STUDIO
+      <a class="logo-main" href="./index.html">
+        <!-- <span class="logo-part-one"></span> -->
+        WEBSTUDIO
       </a>
 
       <p>
