--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
         <!-- menu -->
         <!-- использовать ли тут меню, или лучше юл? по семантике вроде как лучше меню? -->
         <ul>
-          <li class="menu-list"><a href="index.html">Studio</a></li>
-          <li class="menu-list"><a href="index.html">Portfolio</a></li>
-          <li class="menu-list"><a href="index.html">Contacts</a></li>
+          <li class="menu-list"><a href="">Studio</a></li>
+          <li class="menu-list"><a href="">Portfolio</a></li>
+          <li class="menu-list"><a href="">Contacts</a></li>
         </ul>
       </nav>
       <!-- contacts -->
