--- a/index.html
+++ b/index.html
@@ -18,10 +18,8 @@
     <header>
       <nav>
         <!-- logo -->
-        <a class="logo-main" href="./index.html">
-          <!-- <span class="logo-part-one"></span> -->
-          WEBSTUDIO
-        </a>
+        <!-- <span class="logo-part-one"></span> -->
+        <a class="logo-main" href="./index.html">WEBSTUDIO</a>
         <!-- menu -->
         <!-- использовать ли тут меню, или лучше юл? по семантике вроде как лучше меню? -->
         <ul>
@@ -213,10 +211,7 @@
     </main>
 
     <footer>
-      <a class="logo-main" href="./index.html">
-        <!-- <span class="logo-part-one"></span> -->
-        WEBSTUDIO
-      </a>
+      <a class="logo-main" href="./index.html">WEBSTUDIO</a>
 
       <p>
         Increase the flow of customers and sales for your business with digital
