--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       <nav>
         <!-- logo -->
         <!-- <span class="logo-part-one"></span> -->
-        <a class="logo-main" href="./index.html">WEBSTUDIO</a>
+        <a class="logo-main" href="./index.html">WebStudio</a>
         <!-- menu -->
         <!-- использовать ли тут меню, или лучше юл? по семантике вроде как лучше меню? -->
         <ul>
@@ -211,7 +211,7 @@
     </main>
 
     <footer>
-      <a class="logo-main" href="./index.html">WEBSTUDIO</a>
+      <a class="logo-main" href="./index.html">WebStudio</a>
 
       <p>
         Increase the flow of customers and sales for your business with digital
