--- a/index.html
+++ b/index.html
@@ -161,16 +161,14 @@
             />
             <h3>Daniel Wilson</h3>
             <p>UI Designer</p>
-            <ul class="social-media-list">
+            <!-- <ul class="social-media-list">
               <li>
                 <div class="social-meadia-instagram">
                   <a
                     class="instagram-icon"
                     href="https://www.instagram.com/"
                     target="_blank"
-                    ><img
-                      src="./images/icons/instagram.svg"
-                      alt="instagram logo"
+                    ><img src="./images/instagram.svg" alt="instagram logo"
                   /></a>
                 </div>
               </li>
@@ -180,7 +178,7 @@
                     class="instagram-twitter"
                     href="https://www.twitter.com/"
                     target="_blank"
-                    ><img src="./images/icons/twitter.svg" alt="twitter logo"
+                    ><img src="./images/twitter.svg" alt="twitter logo"
                   /></a>
                 </div>
               </li>
@@ -190,7 +188,7 @@
                     class="instagram-facebook"
                     href="https://www.facebook.com/"
                     target="_blank"
-                    ><img src="./images/icons/facebook.svg" alt="facebook logo"
+                    ><img src="./images/facebook.svg" alt="facebook logo"
                   /></a>
                 </div>
               </li>
@@ -200,11 +198,11 @@
                     class="instagram-linkedin"
                     href="https://www.linkedin.com/"
                     target="_blank"
-                    ><img src="./images/icons/linkedin.svg" alt="linkedin logo"
+                    ><img src="./images/linkedin.svg" alt="linkedin logo"
                   /></a>
                 </div>
               </li>
-            </ul>
+            </ul> -->
           </li>
         </ul>
       </section>
