--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
         <ul class="employee-list">
           <li class="employee-card">
             <img
-              src="./images/img1.jpg"
+              src="./images/employeephoto1.jpg"
               alt="Mark Guerrero photo"
               width="264"
               height="260"
@@ -134,7 +134,7 @@
           </li>
           <li class="employee-card">
             <img
-              src="./images/img2.jpg"
+              src="./images/employeephoto2.jpg"
               alt="Tom Ford photo"
               width="264"
               height="260"
@@ -144,7 +144,7 @@
           </li>
           <li class="employee-card">
             <img
-              src="./images/img3.jpg"
+              src="./images/employeephoto3.jpg"
               alt="Camila Garcia photo"
               width="264"
               height="260"
@@ -154,7 +154,7 @@
           </li>
           <li class="employee-card">
             <img
-              src="./images/img4.jpg"
+              src="./images/employeephoto4.jpg"
               alt="Daniel Wilson photo"
               width="264"
               height="260"
