update photo html
update photo html

--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
         <ul class="images-list">
           <li class="images-work">
             <img
-              src="./images/rectangle1.jpg"
+              src="./images/desktopapp.jpg"
               alt="desktop app"
               width="360"
               height="300"
@@ -102,7 +102,7 @@
           </li>
           <li class="images-work">
             <img
-              src="./images/rectangle2.jpg"
+              src="./images/mobilesupport.jpg"
               alt="mobile support"
               width="360"
               height="300"
@@ -110,7 +110,7 @@
           </li>
           <li class="images-work">
             <img
-              src="./images/rectangle3.jpg"
+              src="./images/mobileapp.jpg"
               alt="mobile app"
               width="360"
               height="300"
